--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-10 21:47:48
+lastsearch = 2024-07-11 00:17:41
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Sto
 url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
 
 [chanrathanhthuy.com]
-match = 29.2%%
-title = Top 20 mẫu chăn ga gối đẹp giá rẻ
-url = https://chanrathanhthuy.com/tin-tuc/top-20-mau-chan-ga-goi-dep-gia-re-703.html
+match = 50.0%%
+title = Chăn ga gối đệm giá rẻ
+url = https://chanrathanhthuy.com/tin-tuc/chan-ga-goi-dem-gia-re-1209.html
 
 [myhunggia.com]
 match = -4.2%%
