--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-10 22:49:31
+lastsearch = 2024-07-11 00:12:14
 
 [tiki.vn]
-match = -138.9%%
-title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
+match = -122.2%%
+title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
 
 [nemxinh.net]
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -188.9%%
-title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
+match = -183.3%%
+title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -33,8 +33,8 @@ url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
 match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 753 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-753-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
