--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-10 20:01:55
+lastsearch = 2024-07-11 00:18:25
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -323.1%%
+title = Instagram video by Chan Dior Sunshade • Jun 2, 2024 at 8:35 ...
+url = https://www.instagram.com/reel/C7vRnd7gLPB/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -34,7 +34,7 @@ url = https://www.linklaters.com/en/sitemap
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Dior
+url = https://en.wikipedia.org/wiki/Catherine_Dior
 
 [press.fourseasons.com]
 match = -269.2%%
