--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-10 21:30:27
+lastsearch = 2024-07-11 00:19:50
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -18.5%%
+title = Chiếu điều hoà, ga giường cao su non không bí lưng ...
+url = https://shopee.vn/Chiếu-điều-hoà-ga-giường-cao-su-non-không-bí-lưng-HÀNG-LOẠI-1(TẶNG-2-VỎ-GỐI)-i.49163646.20104275799
 
 [demxanh.com]
 match = 14.8%%
