--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-10 23:50:08
+lastsearch = 2024-07-11 00:15:50
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -212.5%%
-title = [TV] Gấm Kami VS Uyên Phương | GIẢI POOL 9 BI HBSF II ...
-url = https://www.youtube.com/watch?v=Ir7sFOF1oOY
+match = -225.0%%
+title = Hài Coi 9 Phút Cười 70 Cái - TRAI TÀI GÁI XỈU | Tiến Luật ...
+url = https://www.youtube.com/watch?v=Jv89prEPOpE
 
 [tuyensinh247.com]
 match = -225.0%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = -18.8%%
-title = Chiếu lác thiên nhiên : 1m6 .1m8
-url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
+match = -212.5%%
+title = Đồ chơi treo nôi cũi cho bé sơ sinh phát nhạc tự xoay, có ...
+url = https://shopee.vn/Đồ-chơi-treo-nôi-cũi-cho-bé-sơ-sinh-phát-nhạc-tự-xoay-có-đèn-chiếu-hình-lục-lạc-gặm-nướu-điều-khiển-từ-xa-đa-năng-i.256186540.22038728340
 
 [www.thegioididong.com]
 match = -212.5%%
