--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-10 23:41:51
+lastsearch = 2024-07-11 00:15:09
 
 [m.youtube.com]
 match = -144.4%%
@@ -27,9 +27,9 @@ title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
 url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
-match = -166.7%%
-title = Phát hiện quán nem nướng gần đại học thủ dầu một 1 mẹt ...
-url = https://www.tiktok.com/@hauobinhduong/video/7327600133422550290
+match = -116.7%%
+title = 📍nem nướng út vân: 105 đông tác. ⭐️: 20-50 cành ...
+url = https://www.tiktok.com/@longlongneee/video/7247048935045467397
 
 [www.youtube.com]
 match = -150.0%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -138.9%%
-title = Nguoi Viet Colorado | 💥 NEM CUA BỂ VUÔNG SIÊU CHẤT ...
-url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
+match = -105.6%%
+title = Ăn vặt ngon Cali | NEM CHUA HỦ $65 ( 50 cái )
+url = https://m.facebook.com/groups/anvatngoncali/posts/8357068874306053/
 
 [www.proz.com]
 match = -183.3%%
