--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-07-10 22:49:53
+lastsearch = 2024-07-11 00:18:57
 
 [www.diepxuan.com]
-match = 45.8%%
-title = Điệp Xuân Thảm giường Bode 160x200
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 41.7%%
+title = Điệp Xuân Thảm giường nỉ 150x190
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.tripadvisor.com]
 match = -100.0%%
