--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-10 21:18:39
+lastsearch = 2024-07-11 00:14:59
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -66.7%%
+title = Flight and Travel Options
+url = https://www.tui.co.uk/destinations/info/travel-options
 
 [uk.trip.com]
 match = -233.3%%
@@ -305,4 +305,9 @@ url = https://fi.linkedin.com/company/tuigroup
 match = -325.0%%
 title = Tui cancels Spain holidays after government's quarantine ...
 url = https://sg.news.yahoo.com/tui-cancels-holidays-to-spain-after-governments-quarantine-u-turn-093745446.html
+
+[shopee.vn]
+match = -33.3%%
+title = TÚI RÚT TỔNG HƠP KOREA
+url = https://shopee.vn/TÚI-RÚT-TỔNG-HƠP-KOREA-i.53569870.7886364952
 
