--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-10 21:49:36
+lastsearch = 2024-07-11 00:18:36
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -113,8 +113,8 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 
 [cases.stretto.com]
 match = -90.0%%
-title = Case 23-10990 Doc 1 Filed 07/26/23 Page 1 of 260
-url = https://cases.stretto.com/public/x267/12381/PLEADINGS/1238107262380000000053.pdf
+title = Case 23-10988 Doc 1 Filed 07/26/23 Page 1 of 260
+url = https://cases.stretto.com/public/x267/12380/PLEADINGS/1238007262380000000051.pdf
 
 [www.west-cs.com]
 match = -100.0%%
@@ -197,9 +197,9 @@ title = Christopher Copperwheat
 url = https://www.ljmu.ac.uk/about-us/staff-profiles/faculty-of-engineering-and-technology/astrophysics-research-institute/christopher-copperwheat
 
 [cps-vo.org]
-match = -190.0%%
-title = *** 276 Total Attendees (listed in green) *** | Cyber-Physical ...
-url = https://cps-vo.org/cps-pimtg24/registrants-attendees
+match = -140.0%%
+title = Registrants | Cyber-Physical Systems Virtual Organization
+url = https://cps-vo.org/node/57775
 
 [www.va.gov]
 match = -21.4%%
