--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-10 22:20:55
+lastsearch = 2024-07-11 00:32:52
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -17,14 +17,14 @@ title = Bộ chăn ga gối Hanvico LIVING - LV18
 url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
 
 [songhongonline.vn]
-match = 57.7%%
-title = Bộ chăn ga gối SH_UC22 018
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-uc22-018
+match = 50.0%%
+title = Bộ chăn ga gối SH_UC24 102
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-102
 
 [changagoidemsonghong.com]
-match = -29.0%%
-title = Chăn ga gối Sông Hồng dòng Home mã S17-05 - Chất Tencel ...
-url = https://changagoidemsonghong.com/chan-ga-goi-home-s17-05
+match = 38.7%%
+title = Bộ chăn ga gối Walt Disney mã mầu YC22012
+url = https://changagoidemsonghong.com/chan-ga-goi-yc22012
 
 [foreverbedding.net]
 match = -3.2%%
