--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-10 20:50:05
+lastsearch = 2024-07-11 00:29:17
 
 [tiki.vn]
 match = 16.0%%
@@ -42,9 +42,9 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = 12.0%%
-title = Quốc triều chính biên toát yếu
-url = https://books.google.com/books?id=Mm3W8DYq3t4C&pg=PA195&lpg=PA195&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Z0gC8UI_Z0&sig=ACfU3U1dEbsSHXHSPhEFy80DqxgVZBRYww&hl=en&sa=X&ved=2ahUKEwilrt_3gZqHAxXJJ0QIHT_LDOQQ6AF6BAgVEAM
+match = -96.0%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=1KLaAAAAMAAJ&pg=RA3-PA61&lpg=RA3-PA61&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=NOc5Sj-Tv0&sig=ACfU3U23ccqyXrHYk94UqknwGXsRIVLXwQ&hl=en&sa=X&ved=2ahUKEwjM_fHi_5yHAxU2FlkFHT3VBjIQ6AF6BAgUEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
