--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-10 22:16:51
+lastsearch = 2024-07-11 00:30:12
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -42,9 +42,9 @@ title = The Gummy Bear Song - Long English Version
 url = https://www.youtube.com/watch?v=astISOttCQ0
 
 [www.regmovies.com]
-match = -223.1%%
-title = Regal Hollywood - Gainesville Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
+match = -215.4%%
+title = Regal Hollywood @ North I-85 Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [dds.georgia.gov]
 match = -284.6%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -10.0%%
-title = sylviagani
-url = https://www.instagram.com/sylviagani/?hl=en
+match = -207.7%%
+title = GANI (@ganistudios) • Instagram photos and videos
+url = https://www.instagram.com/ganistudios/
 
 [www.nebf.com]
 match = -46.2%%
