--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-10 20:47:27
+lastsearch = 2024-07-11 00:48:48
 
 [www.walmart.com]
 match = -181.2%%
@@ -13,8 +13,8 @@ url = https://www.walmart.com/ip/Zury-Natural-Dream-Feel-Look-Ocean-Wave-18-SOM-
 
 [www.tiktok.com]
 match = -243.8%%
-title = How I like to contour my lips #hudabeauty #foryou #beautytok ...
-url = https://www.tiktok.com/@hudabeauty/video/7267624422679334187
+title = #beautytok #fauxfiltercolorcorrector #colorcorrection @Huda ...
+url = https://www.tiktok.com/@hudabeauty/video/7349654926324419886
 
 [www.diepxuan.com]
 match = -150.0%%
