--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-10 23:23:27
+lastsearch = 2024-07-11 01:24:49
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = -141.2%%
-title = ATEEZ(KQ Fellaz) (Yunho Solo) Performance Video
-url = https://www.youtube.com/watch?v=SOqaA-Mbw88
+match = 17.6%%
+title = iKON - 'I'M OK' M/V
+url = https://www.youtube.com/watch?v=yqszm7AnX-4
 
 [www.tiktok.com]
 match = 20.0%%
