--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-10 20:20:05
+lastsearch = 2024-07-11 01:20:19
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -97,9 +97,9 @@ title = Cookie Policy
 url = https://www.mancity.com/cookie-policy
 
 [moveek.com]
-match = -175.0%%
-title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/cinestar-kien-giang/
+match = -168.8%%
+title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [midumenaq7.com]
 match = -175.0%%
@@ -122,9 +122,9 @@ title = DCINE Sóc Trăng
 url = https://www.dcine.vn/rap/dcine-soc-trang-1.html
 
 [m.facebook.com]
-match = 18.8%%
-title = about an hour ago
-url = https://m.facebook.com/VietnamAirlines/photos/vnamall-tung-ưu-đãi-ngày-trở-lại-mua-sắm-chẳng-ngần-ngại-mừng-ngày-trở-lại-vnama/911256301043625/
+match = -118.8%%
+title = TOUR GIỜ CHÓT | 📢𝗧𝗼𝘂𝗿 𝗧𝗵𝗮̀𝗻𝗵 Đ𝗼̂ - 𝗖𝘂̛̉𝘂 𝗧𝗿𝗮̣𝗶 𝗖𝗮̂𝘂
+url = https://m.facebook.com/groups/2606284112964666/posts/3694418780817855/
 
 [kinhte.congthuong.vn]
 match = -218.8%%
@@ -177,9 +177,9 @@ title = Ghi chép kinh nghiệm 14 ngày sau chuyển phôi
 url = https://tamanhhospital.vn/ghi-chep-kinh-nghiem-14-ngay-sau-chuyen-phoi/
 
 [en.wikipedia.org]
-match = -6.2%%
-title = Religion in Vietnam
-url = https://en.wikipedia.org/wiki/Religion_in_Vietnam
+match = -243.8%%
+title = Viet Cong and People's Army of Vietnam use of terror in the ...
+url = https://en.wikipedia.org/wiki/Viet_Cong_and_People's_Army_of_Vietnam_use_of_terror_in_the_Vietnam_War
 
 [hcmcpv.org.vn]
 match = -193.8%%
@@ -310,4 +310,34 @@ url = https://www.momo.vn/cinema/rap/cgv/cgv-aeon-ha-dong-128
 match = -168.8%%
 title = Cặp da công sở đựng Laptop 14 inch kèm ngăn phụ ...
 url = https://hico.vn/cap-da-cong-so-dung-laptop-14-inch-p075-1803/
+
+[rentapartment.vn]
+match = -131.2%%
+title = Vietnam Postal Code (Zip code) Update in 2024
+url = https://rentapartment.vn/vietnam-zip-postal-code/
+
+[almosaly.com]
+match = -200.0%%
+title = Waktu Sholat Thi Tran Ngoc Lac Vietnam - Untuk Hari 14 ...
+url = https://almosaly.com/id/mawaquit/day/vietnam/thi-tran-ngoc-lac/137147/2023/09/14
+
+[www.sta.soctrang.gov.vn]
+match = -181.2%%
+title = Máy lắc 3 chiều không hiện số model RS-RD5 hãng Phoenix
+url = https://www.sta.soctrang.gov.vn/134_cung-cau-cong-nghe/733_may-lac-3-chieu-khong-hien-so-model-rs-rd5-hang-phoenix-0.html
+
+[www.tripadvisor.in]
+match = -43.8%%
+title = HCMC shopping - Vietnam Forum
+url = https://www.tripadvisor.in/ShowTopic-g293921-i8432-k1323310-HCMC_shopping-Vietnam.html
+
+[partner.hdbank.com.vn]
+match = 6.2%%
+title = Network - HDBank
+url = https://partner.hdbank.com.vn/Default.aspx?ArticleId=b9b9f686-49e9-46bc-b409-5b51ef55ea01
+
+[www.yellowpages.com.vn]
+match = -187.5%%
+title = Herbs and Spices (Ginger, Turmeric, Cinnamon, Anise,.)
+url = https://www.yellowpages.com.vn/categories/303355/spices-herbs-(ginger-turmeric-cinnamon-anise,.)-manufacturers-and-exporters.html?page=14
 
