--- a/images/nem-sieu-nhe-5f-14/config.ini
+++ b/images/nem-sieu-nhe-5f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-14.html
 lastopen = 2024-06-09 23:19:00
 
 [search]
-lastsearch = 2024-07-10 21:31:11
+lastsearch = 2024-07-11 01:24:25
 
 [tuhung.net]
 match = -116.7%%
@@ -75,4 +75,9 @@ url = https://thitruongsi.com/nem-gap-3-pe-1m4x2mx10cm-791131.html
 match = -150.0%%
 title = Vua Nệm - Hệ Thống Bán Lẻ Nệm & Chăn Ga Gối Đệm Toàn ...
 url = https://vuanem.com/
+
+[www.amazon.com]
+match = -77.8%%
+title = Amazon.com: Customer Questions & Answers
+url = https://www.amazon.com/ask/questions/Tx32JUNRFN6L3PW/?source=allQuestionsPage
 
