--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-11 00:15:29
+lastsearch = 2024-07-11 01:23:51
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,9 +17,9 @@ title = 김가일 | Ga Kim - Coreano 🇰🇷 Fácil e Rápido (@gakim0)
 url = https://www.instagram.com/gakim0/?hl=en
 
 [www.reddit.com]
-match = -115.0%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+match = -135.0%%
+title = Riot is cutting back budget on esports? : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
 match = -33.3%%
@@ -132,9 +132,9 @@ title = Wild Rift: Welcome to League of Legends
 url = https://wildrift.leagueoflegends.com/en-us/
 
 [books.google.com]
-match = -115.0%%
-title = Japan Weekly Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=_so9LMK4is&sig=ACfU3U2Fh1XPubGi6U4tKCQSV_VCtL39CQ&hl=en&sa=X&ved=2ahUKEwjN1PP42JyHAxX-ADQIHXMvDCwQ6AF6BAgWEAM
+match = -135.0%%
+title = The Japan Daily Mail - Page 194 - Google Books Result
+url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek0lCQiS&sig=ACfU3U0UrPB55hqFlT6A5S9Rv5XKu6DJzA&hl=en&sa=X&ved=2ahUKEwjI9r38i52HAxXFMlkFHYcOCAcQ6AF6BAgXEAM
 
 [thehill.com]
 match = -105.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -110.0%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.vlr.gg]
 match = 5.6%%
