--- a/images/ruot-nem-warmdream-150x190x09/config.ini
+++ b/images/ruot-nem-warmdream-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-warmdream-150x190x09.html
 lastopen = 2024-06-11 06:07:31
 
 [search]
-lastsearch = 2024-07-10 18:31:02
+lastsearch = 2024-07-11 01:22:13
 
 [www.diepxuan.com]
-match = 51.7%%
-title = Điệp Xuân Ruột nệm Warmdream 180x200x05
-url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x05.html
+match = 3.4%%
+title = Ruột nệm Warmdream 150x190x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/ruot-nem-warmdream-150x190x09.html
 
 [www.amazon.com]
 match = -55.2%%
