--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-10 20:35:25
+lastsearch = 2024-07-11 01:37:28
 
 [shopee.vn]
-match = -162.5%%
-title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
-url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
+match = -137.5%%
+title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
+url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
 
 [www.instagram.com]
-match = -162.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -175.0%%
+title = Hà Trang (@meichannnnn) • Instagram photos and videos
+url = https://www.instagram.com/meichannnnn/?hl=en
 
 [vi.wikipedia.org]
 match = -75.0%%
@@ -32,9 +32,9 @@ title = Tác dụng của mai rùa với sức khỏe
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/tac-dung-cua-mai-rua-voi-suc-khoe/
 
 [www.youtube.com]
-match = -131.2%%
-title = Rùa bị thối mai: Nguyên nhân và cách chữa | VTC16
-url = https://www.youtube.com/watch?v=kJw_2PB2bN4
+match = -193.8%%
+title = Tere Hawaale (Full Video) Laal Singh Chaddha | Aamir ...
+url = https://www.youtube.com/watch?v=KUpwupYj_tY
 
 [znews.vn]
 match = -125.0%%
@@ -52,9 +52,9 @@ title = HSU YING-HUI TO
 url = https://www.cia.gov/readingroom/docs/CIA-RDP84-00581R000100220008-5.pdf
 
 [avibase.bsc-eoc.org]
-match = -181.2%%
-title = Muang Chan bird checklist - Bird Checklists of the World
-url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH04simc
+match = -275.0%%
+title = Khlong Hoi Kong bird checklist - Avibase - Bird Checklists of the World
+url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH05sgkh
 
 [partner.goodsmile.info]
 match = 6.2%%
@@ -192,8 +192,8 @@ title = Tai sao mai rùa có thể chứa đựng thông tin ẩn giấu về ô
 url = https://ngheandost.gov.vn/giao-duc/tai-sao-mai-rua-co-the-chua-dung-thong-tin-an-giau-ve-o-nhiem-hat-nhan-4885.html
 
 [www.weather2umbrella.ca]
-match = -112.5%%
-title = Väderprognos Ban Nong Ngoen Hoi - Meteogram
+match = -131.2%%
+title = Väderprognos Ban Nong Ngoen Hoi - Meteogram ...
 url = https://www.weather2umbrella.ca/väderprognos-ban-nong-ngoen-hoi-thailand-sv/meteogram
 
 [us.trip.com]
