--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-10 23:36:20
+lastsearch = 2024-07-11 01:37:05
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -232,7 +232,7 @@ title = Vượt qua nỗi sợ lạc nội mạc tử cung Chọn đối mặt, 
 url = https://www.youtube.com/watch?v=Rj_I4Cb0gKo
 
 [www.pharmacity.vn]
-match = -112.5%%
-title = Bảng chiều cao cân nặng của trẻ em từ 0-10 tuổi
+match = -187.5%%
+title = Bảng chiều cao cân nặng của trẻ từ 0-10 tuổi chuẩn nhất ...
 url = https://www.pharmacity.vn/bang-chieu-cao-can-nang-cua-tre-tu-0-10-tuoi-chuan-nhat-theo-who.htm
 
