--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-10 23:18:28
+lastsearch = 2024-07-11 01:38:00
 
 [shopee.vn]
 match = 25.0%%
@@ -185,4 +185,9 @@ url = https://minhtuanmobile.com/tin-tuc/cuu-long-thanh-trai-he-lo-lich-chieu-2-
 match = -187.5%%
 title = Câu lạc bộ Phụ nữ Thủ đô tập huấn phòng, chống dịch ...
 url = https://hanoimoi.vn/cau-lac-bo-phu-nu-thu-do-tap-huan-phong-chong-dich-benh-mua-he-671654.html
+
+[www.pharmacity.vn]
+match = -193.8%%
+title = Bảng chiều cao cân nặng của trẻ từ 0-10 tuổi chuẩn nhất ...
+url = https://www.pharmacity.vn/bang-chieu-cao-can-nang-cua-tre-tu-0-10-tuoi-chuan-nhat-theo-who.htm
 
